# convex-hull-assignment-intannk

./: CMakeLists.txt  README.md  drawingwidget.cpp  drawingwidget.h  mainwindow.cpp  mainwindow.h
